Fixed pros/cons <li> issue, added contrasting colors css

--- a/main.css
+++ b/main.css
@@ -9,7 +9,6 @@ body {
 #info-flex-container {
     display: flex;
     flex-direction: column;
-    /* background-color: rgba(79, 81, 125, 0.5); */
 }
 
 #explanation-container {
@@ -24,6 +23,16 @@ body {
     width: 400px;
 }
 
+#pros-analysis {
+    color: #44E63B;
+}
+
+#cons-analysis {
+    color: #ECC45F;
+}
+
+
+
 .main-container {
     display: flex;
     justify-content: space-evenly;
@@ -35,8 +44,6 @@ body {
     background-color: #4F517D;
 
 }
-
-
 
 
 
